feat: implemented dropdown + submit button

--- a/mock/src/styles/App.css
+++ b/mock/src/styles/App.css
@@ -1,6 +1,6 @@
 /* For controlling appearance of the mock app (such as headers) */
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-header {
