--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -72,3 +72,55 @@
 .dropdown {
   border-radius: 10px;
 }
+
+.profile-header {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+  text-align: left;
+}
+
+.profile-container {
+  position: absolute;
+  left: 30%;
+  top: 0px;
+  width: 50%;
+  padding: 2rem;
+  margin: 0 auto;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.profile-button-group {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.profile-list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2rem;
+  list-style: none;
+  padding: 0;
+}
+
+.profile-item {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  width: 100%;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+
+.profile-label {
+  width: 100px;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.profile-value {
+  font-size: 1rem;
+}
