--- a/mock/src/styles/index.css
+++ b/mock/src/styles/index.css
@@ -5,7 +5,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgb(255, 255, 255);
+  color: #cfcfcf;
   background-color: #242424;
 
   font-synthesis: none;
@@ -53,12 +53,12 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #cfcfcf;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #cfcfcf;
   }
 }
