--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -137,7 +137,7 @@
   border-radius: 12px;
   position: absolute;
   left: 57%;
-  top: 110px;
+  top: 90px;
 }
 .date {
   position: absolute;
@@ -171,6 +171,13 @@
   padding: 0;
   margin: 0 auto;
   list-style: none;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #d1d1d1; /* match your gray */
 }
 
 .search-box {
